# JIRA-agent

./: .gitignore  README.MD  plan.json  pyproject.toml
src/: __init__.py  streamlit_epic.py
src/epic_creator/: ai_planner.py  jiraClient.py  orchestrator.py  output.txt  output_json.py
src/epic_creator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/epic_creator/planning/: models.py  orchestrator.py  project_context.py  style_analyser.py
src/epic_creator/services/: context.py  epic_handler.py  field_meta.py  jiraClient.py  llm.py  story_handler.py  task_handler.py
src/epic_creator/test/: manual_check.py
src/jira_planner/planning/: llm.py  models.py  orchestrator.py  planner.py  project_context.py
src/jira_planner/services/: context.py  epic_handler.py  field_meta.py  jira_client.py  story_handler.py  task_handler.py
src/jira_planner/temp_files/: output_json.py
src/jira_planner/ui/: ui.py
