[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epic-creator"
version = "0.0.1"
description = "AI-driven JIRA Epic creation"
authors = [{name="Abhinav Singh Chauhan", email="sabhinavofficial@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32",
  "tenacity>=8.1.0,<9.0.0",
  "langchain-openai>=0.1.0",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "dotenv"
]